TENTACLES-4 Build infra
* Updating dependencies.
* Adding rat to every run and rat report to site reports.
* Started basic site and augmented pom.xml
* Enabled new maven skin for tentacles site.
* LHF: Removed some PMD warnings.



git-svn-id: https://svn.apache.org/repos/asf/creadur/tentacles/trunk@1623233 13f79535-47bb-0310-9956-ffa450edef68